remove jdk5 deps
git-svn-id: http://anonsvn.jboss.org/repos/javassist/trunk@444 30ef5769-5b8d-40dd-aea6-55b5d6557bb3